Fix JavaScript errors: resolve naming conflict and module loading
- Rename 'earth' to 'moonEarth' in moon-control.js to avoid global variable conflict
- Remove ES6 import statement, use script tag loading instead
- Add sound-system.js to index.html script includes

--- a/visualizations/index.html
+++ b/visualizations/index.html
@@ -285,6 +285,7 @@
         <p class="disclaimer">Data compiled from public sources, leaked documents, and pattern analysis. Draw your own conclusions.</p>
     </footer>
 
+    <script src="js/sound-system.js"></script>
     <script src="js/main.js"></script>
     <script src="js/visualizations.js"></script>
     <script src="js/population-genetics.js"></script>
