Fix runtime JavaScript errors
- Fix AudioScheduledSourceNode start() error with try-catch
- Fix D3.js selector error by changing '5g-layer' to 'five-g-layer'
- Update all references from '5g' to 'five-g' for valid CSS class names
- Add null checks for evidence data in tooltip
- Add placeholder favicon.ico to fix 404 error

--- a/visualizations/index.html
+++ b/visualizations/index.html
@@ -107,7 +107,7 @@
                 <label><input type="checkbox" class="layer-toggle" data-layer="missing411"> Missing 411</label>
                 <label><input type="checkbox" class="layer-toggle" data-layer="crop-circles"> Crop Circles</label>
                 <label><input type="checkbox" class="layer-toggle" data-layer="uap"> UAP Sightings</label>
-                <label><input type="checkbox" class="layer-toggle" data-layer="5g"> 5G Overlay</label>
+                <label><input type="checkbox" class="layer-toggle" data-layer="five-g"> 5G Overlay</label>
             </div>
             <div id="world-map-container"></div>
             <div class="info-panel">
