--- a/visualizations/index.html
+++ b/visualizations/index.html
@@ -287,6 +287,7 @@
     </footer>
 
     <script src="js/sound-system.js"></script>
+    <script src="js/enhanced-popups.js"></script>
     <script src="js/main.js"></script>
     <script src="js/visualizations.js"></script>
     <script src="js/population-genetics.js"></script>
