Fix Earth's Hidden Architecture toggles and add stunning ultra-thin Awakening Bloodlines visualization
- Fixed toggle functionality for Earth's Hidden Architecture layers
- Fixed layer name mismatches (core layers now work properly)
- Added surface toggle for Earth visibility
- Created breathtaking Awakening Bloodlines visualization with:
  - Ultra-thin glowing rings and connections
  - 3D interactive bloodline tree from pre-flood origins
  - RH negative distribution charts
  - Activation timeline with key events
  - Floating DNA helixes in background
  - Particle flows along genetic connections
  - Detailed information panels on click
  - High-quality rendering with glow effects
- Integrated bloodline visualization into main navigation
- Added proper cleanup functions for smooth transitions

--- a/visualizations/index.html
+++ b/visualizations/index.html
@@ -336,6 +336,7 @@
     <script src="js/main.js"></script>
     <script src="js/visualizations.js"></script>
     <script src="js/population-genetics.js"></script>
+    <script src="js/bloodline-tree.js"></script>
     <script src="js/galactic-spiral.js"></script>
     <script src="js/earth-3d.js"></script>
     <script src="js/em-symphony.js"></script>
