Add comprehensive mobile optimization
- Create mobile.css with responsive breakpoints (768px, 480px, landscape)
- Add mobile-optimization.js utility module with:
  - Mobile device detection
  - Touch event handlers for D3 and Three.js
  - Performance optimizations (reduced particles, disabled antialiasing)
  - Debounced resize handling
- Update earth-3d.js to use mobile optimizations:
  - Conditional renderer settings
  - Reduced particle counts (30% on mobile)
  - Touch-optimized controls
- Add touch support to D3 visualizations
- Implement touch-friendly UI elements (44px minimum targets)
- Add horizontal scroll for navigation menu on mobile
- Reduce animation complexity on mobile devices
- Add performance monitoring for adaptive quality
- Document mobile optimization in CLAUDE.md

All visualizations now adapt to mobile devices with better performance and touch support.

--- a/visualizations/index.html
+++ b/visualizations/index.html
@@ -41,6 +41,7 @@
     <meta name="twitter:image" content="/twitter-card.png">
     
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/mobile.css">
     <script src="https://d3js.org/d3.v7.min.js"></script>
     <script src="https://unpkg.com/topojson@3"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
@@ -322,6 +323,7 @@
         <p class="disclaimer">Data compiled from public sources, leaked documents, and pattern analysis. Draw your own conclusions.</p>
     </footer>
 
+    <script src="js/mobile-optimization.js"></script>
     <script src="js/sound-system.js"></script>
     <script src="js/enhanced-popups.js"></script>
     <script src="js/main.js"></script>
