Add debug mode for troubleshooting visualizations
- Add debug-viz.js with simple test visualizations
- Enhanced error logging in main.js
- List available init functions in console
- Add fallback to debug mode when visualizations fail
- Include stack traces for better error diagnosis

This will help identify why visualizations aren't showing by providing detailed console output and fallback debug visualizations.

--- a/visualizations/index.html
+++ b/visualizations/index.html
@@ -326,6 +326,7 @@
     <script src="js/mobile-optimization.js"></script>
     <script src="js/sound-system.js"></script>
     <script src="js/enhanced-popups.js"></script>
+    <script src="js/debug-viz.js"></script>
     <script src="js/main.js"></script>
     <script src="js/visualizations.js"></script>
     <script src="js/population-genetics-enhanced.js"></script>
