Phase 1: Implement unified sound control system foundation
- Enhanced sound-system.js with sound registry and event bus
- Added event emitters for sound lifecycle (registered, updated, stopped)
- Created floating SoundControlPanel component
- Added real-time active sounds list with individual controls
- Implemented category-based volume mixers (Sacred, Binaural, Ambient, Events, Alerts)
- Added frequency spectrum visualizer with color-coded bars
- Panel is draggable and minimizable
- Integrated with Sound On/Off toggle button

--- a/visualizations/index.html
+++ b/visualizations/index.html
@@ -323,6 +323,7 @@
 
     <script src="js/mobile-optimization.js"></script>
     <script src="js/sound-system.js"></script>
+    <script src="js/sound-control-panel.js"></script>
     <script src="js/enhanced-popups.js"></script>
     <script src="js/debug-viz.js"></script>
     <script src="js/main.js"></script>
