Fix loading screen stuck issue with D3.js initialization
- Add error handling for D3.js library loading failures
- Implement retry mechanism (up to 10 seconds) for D3.js loading
- Force hide loading screen after 5 seconds to prevent indefinite loading
- Add try-catch blocks around initialization for graceful error handling
- Create error display function to show meaningful messages to users
- Add onload/onerror handlers to D3.js script tag for better tracking

--- a/visualizations/index.html
+++ b/visualizations/index.html
@@ -42,7 +42,7 @@
     
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/mobile.css">
-    <script src="https://d3js.org/d3.v7.min.js"></script>
+    <script src="https://d3js.org/d3.v7.min.js" onload="window.d3Loaded=true" onerror="window.d3LoadError=true"></script>
     <script src="https://unpkg.com/topojson@3"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js" defer></script>
     <script src="https://cdn.jsdelivr.net/gh/mrdoob/three.js@r128/examples/js/controls/OrbitControls.js" defer></script>
