Fix JavaScript errors in Master Convergence, Evidence Matrix, and Live Tracker visualizations
- Added missing FilmShader script to index.html for Master Convergence
- Fixed duplicate identifier 'emResizeTimeout' in Evidence Matrix by using window.evidenceMatrixResizeTimeout
- Fixed EffectComposer dispose error in Master Convergence by clearing passes array instead
- Added missing startDataFeeds method to LiveTracker class

--- a/visualizations/index.html
+++ b/visualizations/index.html
@@ -57,6 +57,7 @@
     <script src="https://cdn.jsdelivr.net/gh/mrdoob/three.js@r128/examples/js/postprocessing/UnrealBloomPass.js" defer></script>
     <script src="https://cdn.jsdelivr.net/gh/mrdoob/three.js@r128/examples/js/postprocessing/FilmPass.js" defer></script>
     <script src="https://cdn.jsdelivr.net/gh/mrdoob/three.js@r128/examples/js/postprocessing/ShaderPass.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/gh/mrdoob/three.js@r128/examples/js/shaders/FilmShader.js" defer></script>
     <script src="https://cdn.jsdelivr.net/gh/mrdoob/three.js@r128/examples/js/shaders/CopyShader.js" defer></script>
     <script src="https://cdn.jsdelivr.net/gh/mrdoob/three.js@r128/examples/js/shaders/LuminosityHighPassShader.js" defer></script>
     <script src="https://cdn.jsdelivr.net/gh/mrdoob/three.js@r128/examples/js/shaders/FXAAShader.js" defer></script>
